2021-July-25 Struan Robertson

		* CollisionOperator.cpp: Replaced numerical integration of sink product distribution 
		with analytical solution.

		* Regression test update.

2021-July-10 Struan Robertson

		* <Reversible>Reaction.cpp classes: Modifications relating to multiple transition states.

		* Regression test update.

2021-June-25 Struan Robertson

		* ConditionsManager.cpp: Gradient calculation during trace fitting corrected for weights.

		* Documentation update.

2021-June-22 Struan Robertson

		* fitting.cpp: Diffusive loss term update and compliation fixes.
		
		* ConditionsManager.cpp: Warning added about diffusive loss.

		* Test update.

2021-June-13 Struan Robertson

		* Documentation update.

		* Schema update.

2021-June-10 Struan Robertson

		* CollisionOperator.cpp, ConditionsManager.h/.cpp, MesmerFlags.h/.cpp, Marquardt.cpp,
		rawdataplot.xsl: Fixes for diffusive loss array.

2021-May-29 Struan Robertson

		* AssociationReaction.cpp, BimolecualrSinkReaction.cpp, IrreversibleUnimolecularReaction.cpp,
		IsomerizatioReaction.cpp, gDensityOfSates.cpp, MesmerTools.h/.cpp, ThermodymanicTables.cpp,
		UnitTest.cpp, Reaction.cpp: High Pressure rate coefficients calculations altered to use higher 
		energy cut-off.

2021-April-29 Struan Robertson

		* CollisionOperator.cpp: Initial implementation of diffusive loss array.

2021-April-18 Struan Robertson

		* Defaults.xml: Added default value of zero for error attribute of me:experimentalRate 
		element.

		* AssociationReactio.cpp, IsomerizationReaction.cpp: Improved output of microcanonical 
		rate coefficients.

2021-April-02 Struan Robertson

		* MesmerILT.cpp: Fix for ILT reference temperature incorrect read bug.

2021-March-28 Struan Robertson

		* ConditionsManager.cpp: Minor change to make grouping of data to be fit optional.

2021-February-14 Struan Robertson

		* ConditionsManager.cpp, Reaction.h, AssociationReaction.h, Collision.cpp: Added 